add sqoop